force-app/main/default/objects/custom_create281__c/custom_create281__c.object-meta.xml
<CustomObject>
    <label>Custom created object281</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects281</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>