force-app/main/default/objects/custom_create281__c/fields/custom_create_281field636__c.field-meta.xml
<CustomField>
    <fullName>custom_create_281field636__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 281field636</label>
    <type>Checkbox</type>
</CustomField>